* GET matches can return condensed header (used by the list) * details page - improved animation rendering * list page - partial rendering instead of full reload for date change * preparing to drop ejs: client side rendering for list and details page
